<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundal_dash"
    tools:context="FragmentIconDashboard" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--        layout logo-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <View
                android:id="@+id/view2"
                android:layout_width="163dp"
                android:layout_height="74dp"
                android:layout_marginLeft="115dp"
                android:background="@drawable/logo" />
        </LinearLayout>

        <!--        layout fragment-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/fundal_dash_alb"
            android:orientation="vertical"
            tools:context="FragmentIconDashboard">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--        layout tv1-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="30dp">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/popular_destinations"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/textView_seeMore"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:textColor="@color/colorPrimary"
                            android:layout_marginLeft="20dp"
                            android:text="@string/see_more" />

                    </LinearLayout>

                    <!--        layout photos-->

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/imageView15"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:layout_marginLeft="10dp"
                                android:src="@drawable/brasov" />

                            <ImageView
                                android:id="@+id/imageView16"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:layout_marginLeft="20dp"
                                android:src="@drawable/timisoara" />

                            <ImageView
                                android:id="@+id/imageView18"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:layout_marginLeft="20dp"
                                android:src="@drawable/iasi" />

                            <ImageView
                                android:id="@+id/imageView17"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="10dp"
                                android:src="@drawable/constanta" />

                        </LinearLayout>
                    </HorizontalScrollView>

                    <!--        layout they are saying-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textViewJSON"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/colorAccent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </TextView>

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/they_say"
                            android:textColor="@color/colorPrimaryDark"

                            android:textSize="18sp" />
                    </LinearLayout>

                    <!--        layout photo daniel + ratingBar-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">


                            <ImageView
                                android:id="@+id/imageView11"
                                android:layout_width="67dp"
                                android:layout_height="50dp"
                                android:layout_marginLeft="5dp"
                                android:src="@drawable/profile1jpg" />

                            <TextView
                                android:id="@+id/textView13"
                                android:layout_width="63dp"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"
                                android:layout_marginStart="87dp"
                                android:layout_marginTop="1dp"
                                android:fontFamily="@font/montserrat_bold"
                                android:text="@string/daniel"
                                android:textColor="@color/colorAccent"
                                android:textSize="16dp" />

                            <TextView
                                android:id="@+id/textView14"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_marginStart="87dp"
                                android:layout_marginTop="25dp"
                                android:fontFamily="@font/montserrat"
                                android:text="@string/daniel_mail"
                                android:textColor="@color/colorAccent"
                                android:textSize="11dp" />

                            <RatingBar
                                android:id="@+id/rating1"
                                style="@style/Widget.AppCompat.RatingBar.Indicator"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="220dp"
                                android:layout_marginTop="5dp"
                                android:numStars="5"
                                android:rating="3.5"
                                android:theme="@style/RatingBar" />


                        </FrameLayout>

                    </LinearLayout>

                    <!--        layout review-->
                    <LinearLayout
                        android:layout_width="380dp"
                        android:layout_height="110dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorLightBackground">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="355dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/review1"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp" />
                    </LinearLayout>


                </LinearLayout>
            </ScrollView>
        </FrameLayout>
    </LinearLayout>
</FrameLayout>